# agent_based_exposure_assessment

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_feature_request.yaml  config.yml
.github/workflows/: linux.yaml
documentation/: CMakeLists.txt  concepts.md  conf.py.in  index.rst  reference.rst
osrm/: README.md  build_osrm.sh  create_routing_data.sh  download_pbf.sh
osrm/environment/: development.yaml
source/: CMakeLists.txt
source/cpp/: CMakeLists.txt  build_module.sh  extension.cc  routing.cc  routing.h
source/python/: CMakeLists.txt  calc_model.py  factors.py  profiles.py  spatial_context.py  weekly_exposure.py  ws_base.py  ws_od_matrix.py
source/python/schedules/: act.py  config.py  schedules.py  timer.py
source/tests/: CMakeLists.txt  test_activities.py  unit_tests.py
